--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Todo": "Data Source=Todo.db"
+    "Todo": "Data Source=D:\\home\\site\\wwwroot\\App_Data\\Todo.db"
   }
 }
